--- a/index.html
+++ b/index.html
@@ -364,125 +364,57 @@
       </div>
     </section>
 
- <section id="roadmap" class="rm">
-  <div class="rm__head">
-    <h2 class="rm__title">Roadmap</h2>
-    <p class="rm__sub">
-      Simple phases. Clean execution. Long-term mission — not noise.
-    </p>
+    <!-- ROADMAP -->
+    <section id="roadmap" class="section">
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>Roadmap</h2>
+          <p>Clear steps. Community-first. Proof on-chain where possible.</p>
+        </div>
 
-    <div class="rm__badges">
-      <span class="rm__badge">Execution-based</span>
-      <span class="rm__badge">Transparent updates</span>
-      <span class="rm__badge">Exchange-ready structure</span>
-    </div>
-  </div>
+        <div class="grid grid--2">
+          <div class="card reveal">
+            <h3>Phase 1 — Foundations</h3>
+            <ul class="bullets">
+              <li>Brand upgrade to BRBRT (site, socials, messaging)</li>
+              <li>Official links & verification (BscScan + token profile updates)</li>
+              <li>Initial transparency page + public proofs (ownership + locks)</li>
+              <li>Community launch: X + Linktree hub</li>
+            </ul>
+          </div>
 
-  <div class="rm__grid">
-    <!-- Phase 1 -->
-    <article class="rm__card" data-phase="1">
-      <div class="rm__top">
-        <div class="rm__phase">Phase 1</div>
-        <div class="rm__name">Foundation</div>
+          <div class="card reveal">
+            <h3>Phase 2 — Community Growth</h3>
+            <ul class="bullets">
+              <li>Weekly story drops (short cinematic clips, awareness posts)</li>
+              <li>Community events & moderation tools (safe space)</li>
+              <li>Partnership outreach (youth awareness & creators)</li>
+              <li>Public progress reports: holders, locks, milestones</li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Phase 3 — Impact</h3>
+            <ul class="bullets">
+              <li>Launch “Supportive Web” hub resources (anti-bullying awareness)</li>
+              <li>Association page + early initiatives (community-guided)</li>
+              <li>Content series: real scenes → animated episodes</li>
+              <li>Transparent funding goals (no profit promises)</li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Phase 4 — Sustainability</h3>
+            <ul class="bullets">
+              <li>Long-term community governance discussion</li>
+              <li>Expand global awareness campaigns</li>
+              <li>Maintain a clean, verifiable transparency standard</li>
+              <li>Iterate website performance & accessibility</li>
+            </ul>
+          </div>
+        </div>
       </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Focus</div>
-        <p class="rm__text">
-          Build the base: brand clarity, community foundation, and security essentials.
-        </p>
-      </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Deliverables</div>
-        <ul class="rm__list">
-          <li><span class="rm__dot"></span> Website &amp; brand</li>
-          <li><span class="rm__dot"></span> Core community</li>
-          <li><span class="rm__dot"></span> Security basics</li>
-        </ul>
-      </div>
-
-      <div class="rm__block rm__block--soft">
-        <div class="rm__label">Exchange signals</div>
-        <ul class="rm__list rm__list--tight">
-          <li><span class="rm__dot rm__dot--ok"></span> Clear official links &amp; contact</li>
-          <li><span class="rm__dot rm__dot--ok"></span> Transparency-first communication</li>
-        </ul>
-      </div>
-    </article>
-
-    <!-- Phase 2 -->
-    <article class="rm__card" data-phase="2">
-      <div class="rm__top">
-        <div class="rm__phase">Phase 2</div>
-        <div class="rm__name">Expansion</div>
-      </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Focus</div>
-        <p class="rm__text">
-          Grow responsibly through partnerships and awareness, while exploring utility.
-        </p>
-      </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Deliverables</div>
-        <ul class="rm__list">
-          <li><span class="rm__dot"></span> Partnerships</li>
-          <li><span class="rm__dot"></span> Awareness campaigns</li>
-          <li><span class="rm__dot"></span> Utility exploration</li>
-        </ul>
-      </div>
-
-      <div class="rm__block rm__block--soft">
-        <div class="rm__label">Exchange signals</div>
-        <ul class="rm__list rm__list--tight">
-          <li><span class="rm__dot rm__dot--ok"></span> Documented progress updates</li>
-          <li><span class="rm__dot rm__dot--ok"></span> Cleaner listing narrative (mission + transparency)</li>
-        </ul>
-      </div>
-    </article>
-
-    <!-- Phase 3 -->
-    <article class="rm__card" data-phase="3">
-      <div class="rm__top">
-        <div class="rm__phase">Phase 3</div>
-        <div class="rm__name">Mission</div>
-      </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Focus</div>
-        <p class="rm__text">
-          Real mission execution: association actions, community impact, long-term growth.
-        </p>
-      </div>
-
-      <div class="rm__block">
-        <div class="rm__label">Deliverables</div>
-        <ul class="rm__list">
-          <li><span class="rm__dot"></span> Association actions</li>
-          <li><span class="rm__dot"></span> Community impact</li>
-          <li><span class="rm__dot"></span> Long-term growth</li>
-        </ul>
-      </div>
-
-      <div class="rm__block rm__block--soft">
-        <div class="rm__label">Exchange signals</div>
-        <ul class="rm__list rm__list--tight">
-          <li><span class="rm__dot rm__dot--ok"></span> Stable operations &amp; transparent governance approach</li>
-          <li><span class="rm__dot rm__dot--ok"></span> Clear mission reporting (impact &amp; awareness)</li>
-        </ul>
-      </div>
-    </article>
-  </div>
-
-  <div class="rm__foot">
-    <p class="rm__note">
-      <strong>Note:</strong> This roadmap is execution-based (not date-based). We prioritize clean delivery and verifiable progress.
-    </p>
-  </div>
-</section>
-
+    </section>
 
     <!-- BUY -->
     <section id="buy" class="section">
