--- a/index.html
+++ b/index.html
@@ -364,57 +364,75 @@
       </div>
     </section>
 
-    <!-- ROADMAP -->
-    <section id="roadmap" class="section">
-      <div class="container">
-        <div class="section__head reveal">
-          <h2>Roadmap</h2>
-          <p>Clear steps. Community-first. Proof on-chain where possible.</p>
-        </div>
+   <!-- ROADMAP -->
+<section id="roadmap" class="section section--videoBg" data-bgvideo>
+  <!-- Background video layer -->
+  <div class="sectionBg" aria-hidden="true">
+    <video
+      class="sectionBg__video"
+      muted
+      playsinline
+      loop
+      preload="none"
+      poster="assets/roadmap-bg.webp"
+    >
+      <source data-src="assets/roadmap-bg.webm" type="video/webm" />
+      <source data-src="assets/roadmap-bg.mp4" type="video/mp4" />
+    </video>
+    <div class="sectionBg__overlay"></div>
+    <div class="sectionBg__grid"></div>
+  </div>
 
-        <div class="grid grid--2">
-          <div class="card reveal">
-            <h3>Phase 1 — Foundations</h3>
-            <ul class="bullets">
-              <li>Brand upgrade to BRBRT (site, socials, messaging)</li>
-              <li>Official links & verification (BscScan + token profile updates)</li>
-              <li>Initial transparency page + public proofs (ownership + locks)</li>
-              <li>Community launch: X + Linktree hub</li>
-            </ul>
-          </div>
+  <div class="container">
+    <div class="section__head reveal">
+      <h2>Roadmap</h2>
+      <p>Clear steps. Community-first. Proof on-chain where possible.</p>
+    </div>
 
-          <div class="card reveal">
-            <h3>Phase 2 — Community Growth</h3>
-            <ul class="bullets">
-              <li>Weekly story drops (short cinematic clips, awareness posts)</li>
-              <li>Community events & moderation tools (safe space)</li>
-              <li>Partnership outreach (youth awareness & creators)</li>
-              <li>Public progress reports: holders, locks, milestones</li>
-            </ul>
-          </div>
-
-          <div class="card reveal">
-            <h3>Phase 3 — Impact</h3>
-            <ul class="bullets">
-              <li>Launch “Supportive Web” hub resources (anti-bullying awareness)</li>
-              <li>Association page + early initiatives (community-guided)</li>
-              <li>Content series: real scenes → animated episodes</li>
-              <li>Transparent funding goals (no profit promises)</li>
-            </ul>
-          </div>
-
-          <div class="card reveal">
-            <h3>Phase 4 — Sustainability</h3>
-            <ul class="bullets">
-              <li>Long-term community governance discussion</li>
-              <li>Expand global awareness campaigns</li>
-              <li>Maintain a clean, verifiable transparency standard</li>
-              <li>Iterate website performance & accessibility</li>
-            </ul>
-          </div>
-        </div>
+    <div class="grid grid--2">
+      <div class="card reveal">
+        <h3>Phase 1 — Foundations</h3>
+        <ul class="bullets">
+          <li>Brand upgrade to BRBRT (site, socials, messaging)</li>
+          <li>Official links & verification (BscScan + token profile updates)</li>
+          <li>Initial transparency page + public proofs (ownership + locks)</li>
+          <li>Community launch: X + Linktree hub</li>
+        </ul>
       </div>
-    </section>
+
+      <div class="card reveal">
+        <h3>Phase 2 — Community Growth</h3>
+        <ul class="bullets">
+          <li>Weekly story drops (short cinematic clips, awareness posts)</li>
+          <li>Community events & moderation tools (safe space)</li>
+          <li>Partnership outreach (youth awareness & creators)</li>
+          <li>Public progress reports: holders, locks, milestones</li>
+        </ul>
+      </div>
+
+      <div class="card reveal">
+        <h3>Phase 3 — Impact</h3>
+        <ul class="bullets">
+          <li>Launch “Supportive Web” hub resources (anti-bullying awareness)</li>
+          <li>Association page + early initiatives (community-guided)</li>
+          <li>Content series: real scenes → animated episodes</li>
+          <li>Transparent funding goals (no profit promises)</li>
+        </ul>
+      </div>
+
+      <div class="card reveal">
+        <h3>Phase 4 — Sustainability</h3>
+        <ul class="bullets">
+          <li>Long-term community governance discussion</li>
+          <li>Expand global awareness campaigns</li>
+          <li>Maintain a clean, verifiable transparency standard</li>
+          <li>Iterate website performance & accessibility</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- BUY -->
     <section id="buy" class="section">
