--- a/index.html
+++ b/index.html
@@ -1,181 +1,301 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BRBRT: Verdant Veil - Realistic 3D Game</title>
-  <style>
-    body { margin: 0; overflow: hidden; background: #000; font-family: monospace; color: #00ff00; }
-    canvas { display: block; }
-    #ui { position: absolute; top: 20px; left: 20px; z-index: 100; pointer-events: none; text-shadow: 0 0 10px #00ff00; }
-    #medallion { position: absolute; top: 20px; right: 20px; width: 80px; height: 80px; border-radius: 50%; background: rgba(0,255,0,0.2); border: 2px solid #00ff00; display: flex; align-items: center; justify-content: center; font-size: 12px; font-weight: bold; box-shadow: 0 0 30px rgba(0,255,0,0.5); transition: all 0.1s; }
-    #crosshair { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: #00ff00; font-size: 24px; z-index: 99; }
-    #instructions { position: absolute; bottom: 20px; left: 20px; font-size: 14px; opacity: 0.7; }
-    #act { position: absolute; top: 20px; right: 120px; font-size: 16px; }
-  </style>
+  <!-- Perf: DNS/Preconnect fonts (optional) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#07110D" />
+  <meta name="color-scheme" content="dark" />
+
+  <title>BRBRT Crypto Project - Strength • Dignity • Awareness (BNB Chain)</title>
+  <meta name="description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and personal growth. Transparency-first. No promises of profit. NFA." />
+
+  <!-- SEO -->
+  <link rel="canonical" href="https://brbrt.com/" />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/logo-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/logo-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/logo-180.png">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="BRBRT — Strength • Dignity • Awareness" />
+  <meta property="og:description" content="A community-driven meme token on BNB Chain. Transparency-first. No promises of profit. NFA." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://brbrt.com/" />
+  <meta property="og:site_name" content="BRBRT" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="https://brbrt.com/assets/og-brbrt.jpg" />
+  <meta property="og:image:alt" content="BRBRT – Strength • Dignity • Awareness" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BRBRT Crypto Project – Strength • Dignity • Awareness (BNB Chain)" />
+  <meta name="twitter:description" content="BRBRT is a community-driven meme token on BNB Chain inspired by a real story of bullying, resilience and purpose. Transparency-first. NFA." />
+  <meta name="twitter:image" content="https://brbrt.com/assets/og-brbrt.jpg" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://brbrt.com/#organization",
+        "name": "BRBRT",
+        "url": "https://brbrt.com/",
+        "logo": "https://brbrt.com/assets/logo-180.png",
+        "sameAs": [
+          "https://x.com/_BRBRT_",
+          "https://www.instagram.com/_brbrt_/",
+          "https://linktr.ee/BRBRT"
+        ]
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://brbrt.com/#website",
+        "url": "https://brbrt.com/",
+        "name": "BRBRT",
+        "publisher": { "@id": "https://brbrt.com/#organization" },
+        "inLanguage": "en"
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://brbrt.com/#webpage",
+        "url": "https://brbrt.com/",
+        "name": "BRBRT Crypto Project - Strength • Dignity • Awareness (BNB Chain)",
+        "isPartOf": { "@id": "https://brbrt.com/#website" },
+        "about": { "@id": "https://brbrt.com/#organization" },
+        "inLanguage": "en"
+      }
+    ]
+  }
+  </script>
+
+  <!-- CSS -->
+  <link rel="preload" href="style.css" as="style" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <div id="ui">
-    <div>HEALTH: <span id="health">100</span></div>
-    <div>PROOF: <span id="proof">0</span></div>
-  </div>
-  <div id="act">ACT I: Foundations</div>
-  <div id="medallion">BRBRT</div>
-  <div id="crosshair">+</div>
-  <div id="instructions">WASD Move | SPACE Jump | Mouse Look | E Hack | Multiplayer Connected</div>
+  <!-- Skip link -->
+  <a class="skip" href="#content">Skip to content</a>
 
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.169.0/build/three.module.js?module",
-        "three/addons/": "https://unpkg.com/three@0.169.0/examples/jsm/"
-      }
-    }
-  </script>
-  <script type="module">
-    import * as THREE from 'three';
-    import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
-    import { PointerLockControls } from 'three/addons/controls/PointerLockControls.js';
-    import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
-    import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
-    import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
-    import { OutputPass } from 'three/addons/postprocessing/OutputPass.js';
-    import { io } from 'https://cdn.socket.io/4.7.5/socket.io.esm.min.js';
+  <!-- Background FX Canvas -->
+  <canvas id="fx" aria-hidden="true"></canvas>
 
-    const socket = io('ws://localhost:3000'); // Replace with your server URL for real deploy
+  <!-- NAV -->
+  <header class="nav" role="banner">
+    <div class="nav__inner">
+      <a class="brand" href="#top" aria-label="BRBRT home">
+        <img class="brand__logo" src="assets/logo-64.png" width="32" height="32" alt="BRBRT logo" decoding="async" />
+        <span class="brand__name">BRBRT</span>
+      </a>
 
-    const scene = new THREE.Scene();
-    scene.fog = new THREE.FogExp2(0x0a1a0a, 0.005);
+      <nav class="nav__links" aria-label="Primary">
+        <a href="#story">Story</a>
+        <a href="#token">Token</a>
+        <a href="#transparency">Transparency</a>
+        <a href="#roadmap">Roadmap</a>
+        <a href="whitepaper.html">Whitepaper</a>
+        <a href="association.html">Association</a>
+        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
+        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+        <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
+      </nav>
 
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.6, 0); // Eye height
+      <div class="nav__actions">
+        <button id="soundBtn" class="btn btn--ghost" type="button" aria-pressed="false" aria-label="Toggle sound">
+          <span class="btn__icon" aria-hidden="true">🔊</span>
+          <span class="btn__text">Sound</span>
+        </button>
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true, logarithmicDepthBuffer: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.shadowMap.enabled = true;
-    renderer.shadowMap.type = THREE.PCFSoftShadowMap;
-    renderer.outputColorSpace = THREE.SRGBColorSpace;
-    renderer.toneMapping = THREE.ACESFilmicToneMapping;
-    renderer.toneMappingExposure = 1.1;
-    document.body.appendChild(renderer.domElement);
+        <a class="btn btn--primary" href="#buy" aria-label="How to buy">
+          <span class="btn__text">How to Buy</span>
+          <span class="btn__icon" aria-hidden="true"></span>
+        </a>
 
-    const composer = new EffectComposer(renderer);
-    composer.addPass(new RenderPass(scene, camera));
-    const bloomPass = new UnrealBloomPass(new THREE.Vector2(window.innerWidth, window.innerHeight), 0.8, 0.3, 0.9);
-    composer.addPass(bloomPass);
-    composer.addPass(new OutputPass());
+        <button id="menuBtn" class="hamburger" type="button" aria-label="Open menu" aria-expanded="false" aria-controls="mobileMenu">
+          <span></span><span></span><span></span>
+        </button>
+      </div>
+    </div>
 
-    // Lights
-    const ambient = new THREE.AmbientLight(0x223322, 0.6);
-    scene.add(ambient);
-    const sunLight = new THREE.DirectionalLight(0xffa500, 0.8); // Sunset orange
-    sunLight.position.set(50, 100, -50);
-    sunLight.castShadow = true;
-    sunLight.shadow.camera.near = 0.5;
-    sunLight.shadow.camera.far = 500;
-    sunLight.shadow.mapSize.width = 4096;
-    sunLight.shadow.mapSize.height = 4096;
-    scene.add(sunLight);
+    <!-- Mobile menu -->
+    <div id="mobileMenu" class="mobile" aria-hidden="true" hidden>
+      <div class="mobile__panel">
+        <a href="#story">Story</a>
+        <a href="#token">Token</a>
+        <a href="#transparency">Transparency</a>
+        <a href="#roadmap">Roadmap</a>
+        <a href="whitepaper.html">Whitepaper</a>
+        <a href="association.html">Association</a>
+        <a class="mobile__cta" href="#buy">How to Buy</a>
 
-    // Procedural Jungle Terrain
-    const terrainGeo = new THREE.PlaneGeometry(500, 500, 256, 256);
-    terrainGeo.rotateX(-Math.PI / 2);
-    const terrainMat = new THREE.MeshStandardMaterial({ 
-      color: 0x1a3a1a, 
-      roughness: 1, 
-      metalness: 0,
-      map: new THREE.TextureLoader().load('https://example.com/jungle-ground.jpg') // Use Asset 3 URL
-    });
-    const terrain = new THREE.Mesh(terrainGeo, terrainMat);
-    terrain.receiveShadow = true;
-    scene.add(terrain);
-    // Heightmap
-    const pos = terrainGeo.attributes.position;
-    for (let i = 0; i < pos.count; i++) {
-      const x = pos.getX(i);
-      const z = pos.getZ(i);
-      pos.setY(i, (Math.sin(x * 0.05) + Math.sin(z * 0.05)) * 5 + Math.random() * 2);
-    }
-    pos.needsUpdate = true;
-    terrainGeo.computeVertexNormals();
+        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer" class="drawerLink">X</a>
+        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
+        <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
+        <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
+      </div>
+    </div>
+  </header>
 
-    // Trees (loaded GLB for realism)
-    const loader = new GLTFLoader();
-    const trees = [];
-    loader.load('https://example.com/jungle-tree.glb', (gltf) => { // Use searched GLB URL
-      const treeModel = gltf.scene;
-      treeModel.traverse((child) => { if (child.isMesh) child.castShadow = true; });
-      for (let i = 0; i < 80; i++) {
-        const clone = treeModel.clone();
-        clone.position.set(
-          (Math.random() - 0.5) * 400,
-          0,
-          (Math.random() - 0.5) * 400
-        );
-        clone.scale.set(5 + Math.random() * 3, 5 + Math.random() * 3, 5 + Math.random() * 3);
-        scene.add(clone);
-        trees.push(clone);
-      }
-    });
+  <!-- MAIN -->
+  <main id="content" role="main">
+    <!-- HERO -->
+    <section id="top" class="hero" aria-label="BRBRT hero">
+      <video
+        id="heroVideo"
+        class="hero__video"
+        autoplay
+        muted
+        playsinline
+        loop
+        preload="none"
+        poster="assets/hero-poster.webp"
+      >
+        <source src="assets/hero-web.mp4" type="video/mp4" />
+      </video>
 
-    // Rain (realistic lines)
-    const rainGeo = new THREE.BufferGeometry();
-    const rainPositions = [];
-    const rainVelocities = [];
-    for (let i = 0; i < 20000; i++) {
-      rainPositions.push((Math.random() - 0.5) * 500, Math.random() * 200, (Math.random() - 0.5) * 500);
-      rainVelocities.push(0, - (10 + Math.random() * 20), 0);
-    }
-    rainGeo.setAttribute('position', new THREE.Float32BufferAttribute(rainPositions, 3));
-    const rainMat = new THREE.LineBasicMaterial({ color: 0x88ccff, transparent: true, opacity: 0.5 });
-    const rainLines = new THREE.LineSegments(rainGeo, rainMat);
-    scene.add(rainLines);
+      <div class="hero__overlay" aria-hidden="true"></div>
 
-    // BRBRT Player (loaded GLB for realism)
-    let playerModel;
-    loader.load('https://example.com/brbrt-character.glb', (gltf) => { // Use Asset 1 as base, or searched GLB
-      playerModel = gltf.scene;
-      playerModel.traverse((child) => {
-        if (child.isMesh) {
-          child.castShadow = true;
-          if (child.name === 'medallion') child.material.emissive = new THREE.Color(0x00ff00);
-        }
-      });
-      scene.add(playerModel);
-    });
+      <div class="hero__inner">
+        <div class="hero__kicker reveal">
+          <span class="pill">GLOBAL YOUTH. GLOBAL HOPE.</span>
+          <span class="pill pill--ghost">BNB Chain • Meme Token</span>
+        </div>
 
-    // Terminals & Enemies (similar, loaded or procedural)
-    // ... (expand from previous code)
+        <h1 class="hero__title reveal">
+          BRBRT is a meme token built from a real story —
+          <span class="glow">bullying → resilience → purpose</span>.
+        </h1>
 
-    // Multiplayer Sync
-    socket.on('playerUpdate', (data) => {
-      // Update other players positions (add other player models)
-    });
-    socket.on('terminalHacked', (id) => {
-      // Remove terminal
-    });
+        <p class="hero__sub reveal">
+          No hype. No profit promises. Just a community mission focused on awareness, dignity,
+          and transparent on-chain proof.
+          <span class="muted">NFA • DYOR</span>
+        </p>
 
-    // Game Loop
-    function animate() {
-      requestAnimationFrame(animate);
+        <div class="hero__cta reveal">
+          <a class="btn btn--primary" href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">
+            Buy on PancakeSwap
+            <span class="btn__icon" aria-hidden="true">↗</span>
+          </a>
+          <a class="btn btn--ghost" href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">
+            View on BscScan
+            <span class="btn__icon" aria-hidden="true">↗</span>
+          </a>
+          <button class="btn btn--ghost" id="copyCA" type="button" data-copy="0xf97522ABEf762d28729E073019343b72C6e8D2C1">
+            Copy Contract
+            <span class="btn__icon" aria-hidden="true">⧉</span>
+          </button>
+        </div>
 
-      // Update player position, velocity, etc. (from previous)
-      if (playerModel) playerModel.position.copy(state.playerPos);
+        <div class="hero__meta reveal">
+          <div class="metaCard">
+            <div class="metaCard__label">Contract</div>
+            <div class="metaCard__value mono">0xf975...D2C1</div>
+          </div>
+          <div class="metaCard">
+            <div class="metaCard__label">Contact</div>
+            <div class="metaCard__value" id="emailSlot"></div>
+          </div>
+          <div class="metaCard">
+            <div class="metaCard__label">Links</div>
+            <div class="metaCard__value">
+              <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">linktr.ee/BRBRT</a>
+            </div>
+          </div>
+        </div>
 
-      // Rain update
-      const posAttr = rainGeo.attributes.position;
-      for (let i = 0; i < posAttr.count; i += 3) {
-        posAttr.setY(i, posAttr.getY(i) + rainVelocities[i + 1] * 0.01);
-        if (posAttr.getY(i) < 0) posAttr.setY(i, 200);
-      }
-      posAttr.needsUpdate = true;
+        <div class="hero__hint reveal" aria-hidden="true">
+          Scroll <span class="hero__chev">⌄</span>
+        </div>
 
-      // Emit position to server
-      socket.emit('updatePosition', state.playerPos);
+        <!-- Fallback play button if autoplay is blocked -->
+        <button id="heroPlay" class="heroPlay" type="button" aria-label="Play background video">
+          Tap to play
+        </button>
+      </div>
+    </section>
 
-      composer.render();
-    }
-    animate();
-  </script>
-</body>
-</html>
+    <!-- STORY -->
+    <section id="story" class="section">
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>Why BRBRT exists</h2>
+          <p>
+            A real story can become a real mission. BRBRT is inspired by lived experiences of bullying,
+            silence, and the choice to rebuild with dignity — turning pain into awareness and community action.
+          </p>
+        </div>
+
+        <div class="grid grid--3">
+          <article class="card reveal">
+            <h3>Courage</h3>
+            <p>Learning to say “no”, to speak up, and to protect the next generation from moral harassment and abuse.</p>
+          </article>
+          <article class="card reveal">
+            <h3>Compassion</h3>
+            <p>Supporting mental health awareness and creating a safe space for youth to be seen and heard.</p>
+          </article>
+          <article class="card reveal">
+            <h3>Community</h3>
+            <p>Transparent, on-chain proof and community-first progress. No hidden control. No false promises.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- LOGO VIDEO -->
+    <section class="section section--tight">
+      <div class="container">
+        <div class="split">
+          <div class="split__left reveal">
+            <h2>Token Reveal</h2>
+            <p>A cinematic identity — clean, modern, and future-forward. This is BRBRT: strength, dignity, awareness.</p>
+
+            <div class="stack">
+              <a class="btn btn--primary" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">
+                Official Links <span class="btn__icon" aria-hidden="true">↗</span>
+              </a>
+              <a class="btn btn--ghost" href="whitepaper.html">Read Whitepaper</a>
+            </div>
+          </div>
+
+          <div class="split__right reveal">
+            <figure class="mediaFrame">
+              <video class="logoVideo" autoplay muted playsinline loop preload="metadata" poster="assets/hero-poster.webp">
+                <source src="assets/logo-web.mp4" type="video/mp4" />
+              </video>
+              <div class="mediaFrame__glow" aria-hidden="true"></div>
+              <figcaption class="mediaFrame__badge mono">BRBRT • BNB Chain</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TOKEN -->
+    <section id="token" class="section">
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>Token Info</h2>
+          <p>Use official links only. Verify contract addresses on-chain.</p>
+        </div>
+
+        <div class="grid grid--2">
+          <div class="card reveal">
+            <h3>Official</h3>
+            <ul class="list">
+              <li>
+                <span>Contract</span>
+                <button class="chip mono" data-copy="0xf97522ABEf762d28729E073019343b72C6e8D2C1">0xf975…D2C1 ⧉</button>
+              </li>
+              <li>
+                <span>PancakeSwap</span>
+                <a class="chip" href="https://pancakeswap.finance/swap?outputC
