--- a/index.html
+++ b/index.html
@@ -298,4 +298,214 @@
               </li>
               <li>
                 <span>PancakeSwap</span>
-                <a class="chip" href="https://pancakeswap.finance/swap?outputC
+                <a class="chip" href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">Buy ↗</a>
+              </li>
+              <li>
+                <span>BscScan</span>
+                <a class="chip" href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">Explorer ↗</a>
+              </li>
+              <li>
+                <span>Linktree</span>
+                <a class="chip" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">linktr.ee/BRBRT ↗</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Compliance-first messaging</h3>
+            <p class="muted">
+              BRBRT is a meme token with a mission-driven story. This website is informational only.
+              We do not promise profits, returns, or financial outcomes.
+            </p>
+            <div class="notice">
+              <strong>NFA / DYOR</strong>
+              <span>Always verify links and contract addresses before interacting.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TRANSPARENCY -->
+    <section id="transparency" class="section">
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>Transparency</h2>
+          <p>On-chain proof, public links, and accountability.</p>
+        </div>
+
+        <div class="grid grid--3">
+          <div class="card reveal">
+            <h3>Ownership</h3>
+            <p>Ownership has been renounced on-chain.</p>
+            <a class="chip" href="https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1#readContract" target="_blank" rel="noopener">
+              Verify owner() ↗
+            </a>
+          </div>
+
+          <div class="card reveal">
+            <h3>Reserve Lock (PinkLock V2)</h3>
+            <p class="mono small">
+              Locked: 279,897.5221 BRBR<br>
+              Unlock: 2030-01-01 (UTC)
+            </p>
+            <a class="chip" href="https://www.pinksale.finance/pinklock/bsc/record/1437018" target="_blank" rel="noopener">
+              View lock record ↗
+            </a>
+          </div>
+
+          <div class="card reveal">
+            <h3>Contact</h3>
+            <p>Official email:</p>
+            <button id="copyEmail" class="chip" type="button">contact@brbrt.com ⧉</button>
+            <p class="muted small">Protected from simple email scrapers.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ROADMAP (UPDATED: Cinematic background video behind content) -->
+    <section id="roadmap" class="section section--videoBg" data-bgvideo>
+      <!-- Background video layer -->
+      <div class="sectionBg" aria-hidden="true">
+        <video
+          class="sectionBg__video"
+          muted
+          playsinline
+          loop
+          preload="none"
+          poster="assets/roadmap-bg.webp"
+        >
+          <source data-src="assets/roadmap-bg.webm" type="video/webm" />
+          <source data-src="assets/roadmap-bg.mp4" type="video/mp4" />
+        </video>
+        <div class="sectionBg__overlay"></div>
+        <div class="sectionBg__grid"></div>
+      </div>
+
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>Roadmap</h2>
+          <p>Clear steps. Community-first. Proof on-chain where possible.</p>
+        </div>
+
+        <div class="grid grid--2">
+          <div class="card reveal">
+            <h3>Phase 1 — Foundations</h3>
+            <ul class="bullets">
+              <li>Brand upgrade to BRBRT (site, socials, messaging)</li>
+              <li>Official links & verification (BscScan + token profile updates)</li>
+              <li>Initial transparency page + public proofs (ownership + locks)</li>
+              <li>Community launch: X + Linktree hub</li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Phase 2 — Community Growth</h3>
+            <ul class="bullets">
+              <li>Weekly story drops (short cinematic clips, awareness posts)</li>
+              <li>Community events & moderation tools (safe space)</li>
+              <li>Partnership outreach (youth awareness & creators)</li>
+              <li>Public progress reports: holders, locks, milestones</li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Phase 3 — Impact</h3>
+            <ul class="bullets">
+              <li>Launch “Supportive Web” hub resources (anti-bullying awareness)</li>
+              <li>Association page + early initiatives (community-guided)</li>
+              <li>Content series: real scenes → animated episodes</li>
+              <li>Transparent funding goals (no profit promises)</li>
+            </ul>
+          </div>
+
+          <div class="card reveal">
+            <h3>Phase 4 — Sustainability</h3>
+            <ul class="bullets">
+              <li>Long-term community governance discussion</li>
+              <li>Expand global awareness campaigns</li>
+              <li>Maintain a clean, verifiable transparency standard</li>
+              <li>Iterate website performance & accessibility</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- BUY -->
+    <section id="buy" class="section">
+      <div class="container">
+        <div class="section__head reveal">
+          <h2>How to Buy (Quick)</h2>
+          <p>Simple steps. Always verify contract addresses.</p>
+        </div>
+
+        <div class="grid grid--3">
+          <div class="card reveal">
+            <h3>1) Get BNB</h3>
+            <p>Use BNB on BNB Chain for gas and swaps.</p>
+          </div>
+          <div class="card reveal">
+            <h3>2) Open PancakeSwap</h3>
+            <p>Use the official link below.</p>
+            <a class="chip" href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">Swap ↗</a>
+          </div>
+          <div class="card reveal">
+            <h3>3) Verify</h3>
+            <p>Confirm the contract address on BscScan.</p>
+            <a class="chip" href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">Explorer ↗</a>
+          </div>
+        </div>
+
+        <div class="notice notice--big reveal">
+          <strong>Reminder:</strong>
+          <span>BRBRT makes no promises of profit. This website is informational only. DYOR.</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer id="contact" class="footer" role="contentinfo">
+      <div class="container footer__inner">
+        <div class="footer__left">
+          <div class="footer__brand">
+            <img src="assets/logo-64.png" alt="BRBRT logo" width="32" height="32" loading="lazy" decoding="async" />
+            <div>
+              <div class="footer__name">BRBRT</div>
+              <div class="footer__tag">Strength • Dignity • Awareness</div>
+            </div>
+          </div>
+
+          <p class="footer__small muted">
+            © <span id="year"></span> BRBRT. All rights reserved.
+            This site is informational only. No financial advice.
+          </p>
+        </div>
+
+        <div class="footer__right">
+          <div class="footer__links">
+            <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan</a>
+            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap</a>
+            <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree</a>
+            <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
+            <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+          </div>
+
+          <div class="footer__legal">
+            <a href="privacy.html">Privacy</a>
+            <a href="terms.html">Terms</a>
+          </div>
+
+          <button class="btn btn--ghost btn--small" id="copyEmailFooter" type="button">
+            contact@brbrt.com ⧉
+          </button>
+        </div>
+      </div>
+    </footer>
+  </main>
+
+  <!-- Scripts -->
+  <script src="script.js" defer></script>
+</body>
+</html>
