--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         "url": "https://brbrt.com/",
         "logo": "https://brbrt.com/assets/logo-180.png",
         "sameAs": [
-          "https://x.com/_BRBRT_",
-          "https://www.instagram.com/_brbrt_/",
+          "https://x.com/BRBRToken",
+          "https://www.instagram.com/brbrtcoin/",
           "https://linktr.ee/BRBRT"
         ]
       },
@@ -136,8 +136,8 @@
         <a href="association.html">Association</a>
         <a class="mobile__cta" href="#buy">How to Buy</a>
 
-        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer" class="drawerLink">X</a>
-        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
+        <a href="https://x.com/BRBRToken" target="_blank" rel="noreferrer" class="drawerLink">X</a>
+        <a href="https://www.instagram.com/brbrtcoin/" target="_blank" rel="noreferrer" class="drawerLink">Instagram</a>
         <a href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer" class="drawerLink">Linktree</a>
         <a href="mailto:contact@brbrt.com" class="drawerLink">contact@brbrt.com</a>
       </div>
@@ -488,8 +488,8 @@
             <a href="https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener">BscScan</a>
             <a href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener">PancakeSwap</a>
             <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener">Linktree</a>
-            <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
-            <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+            <a href="https://x.com/BRBRToken" target="_blank" rel="noreferrer">X</a>
+            <a href="https://www.instagram.com/brbrtcoin/" target="_blank" rel="noreferrer">Instagram</a>
           </div>
 
           <div class="footer__legal">
