--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <a href="#roadmap">Roadmap</a>
         <a href="whitepaper.html">Whitepaper</a>
         <a href="association.html">Association</a>
-        <a href="https://x.com/_BRBRT_" target="_blank" rel="noreferrer">X</a>
-        <a href="https://www.instagram.com/_brbrt_/" target="_blank" rel="noreferrer">Instagram</a>
+        <a href="https://x.com/BRBRToken" target="_blank" rel="noreferrer">X</a>
+        <a href="https://www.instagram.com/brbrtcoin/" target="_blank" rel="noreferrer">Instagram</a>
         <a class="pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noreferrer">Linktree</a>
       </nav>
 
