--- a/index.html
+++ b/index.html
@@ -504,7 +504,27 @@
       </div>
     </footer>
   </main>
+<section class="partners" id="partners">
+  <div class="partners-inner">
+    <h2 class="partners-title">Partners</h2>
+    <p class="partners-subtitle">Ecosystem links & integrations</p>
 
+    <div class="partners-marquee" aria-label="Partners logos">
+      <div class="partners-track">
+        <!-- Set A -->
+        <a class="partner" href="https://www.geckoterminal.com" target="_blank" rel="noopener">
+          <img src="assets/partners/geckoterminal.svg" alt="GeckoTerminal">
+        </a>
+        <!-- Set B (duplicate for seamless loop) -->
+        <a class="partner" href="https://www.geckoterminal.com" target="_blank" rel="noopener" aria-hidden="true" tabindex="-1">
+          <img src="assets/partners/geckoterminal.svg" alt="">
+        </a>
+         </div>
+    </div>
+
+    <div class="partners-hint">Hover to pause • Tap a logo to open</div>
+  </div>
+</section>
   <!-- Scripts -->
   <script src="script.js" defer></script>
 </body>
